Changed bg color of window header, fixed spacing of buttons

--- a/src/app/components/dialog-window/dialog-window.component.scss
+++ b/src/app/components/dialog-window/dialog-window.component.scss
@@ -12,7 +12,8 @@
 
 .window-header {
   cursor: move;
-  background-color: #ccc;
+  // background-color: var(--cv-lightgrey);
+  background-color: var(--cv-white);
   padding: 5px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
@@ -32,13 +33,14 @@
 .close-btn,
 .minimize-btn {
   cursor: pointer;
-  margin-right: 4px;
+  // margin-right: 4px;
   text-align: center;
   height: 24px;
   width: 24px;
   border: 1px solid var(--cv-grey);
   border-radius: 50%;
   transition: all 0.15s ease-in-out;
+  // margin-top: 4px;
 }
 
 .close-btn:hover,
